dataset1235/2025-2/805158916/users/2931402603/executions/2118643220_1420232579.log
== RUN (2025-09-01 14:10:00)
-- CODE: 
coroassuecas = float(input("valor em coroas suecas: "))
real = float(input("valor em reais: "))
real = coroas suecas * 0.46
print(round(real,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
2.3
-- ERROR:
File "XXXX", line 3
    real = coroas suecas * 0.46
                  ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12
---- correct output:
5.52
-- ERROR:
File "XXXX", line 3
    real = coroas suecas * 0.46
                  ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
0.46
-- ERROR:
File "XXXX", line 3
    real = coroas suecas * 0.46
                  ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
7
---- correct output:
3.22
-- ERROR:
File "XXXX", line 3
    real = coroas suecas * 0.46
                  ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
9.66
-- ERROR:
File "XXXX", line 3
    real = coroas suecas * 0.46
                  ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
4.6
-- ERROR:
File "XXXX", line 3
    real = coroas suecas * 0.46
                  ^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:10:58)
-- CODE: 
coroassuecas = float(input("valor em coroas suecas: "))
real = coroassuecas * 0.46
print(round(real,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
2.3
---- user output:
valor em coroas suecas: 2.3
-- TEST CASE 2:
---- input:
12
---- correct output:
5.52
---- user output:
valor em coroas suecas: 5.52
-- TEST CASE 3:
---- input:
1
---- correct output:
0.46
---- user output:
valor em coroas suecas: 0.46
-- TEST CASE 4:
---- input:
7
---- correct output:
3.22
---- user output:
valor em coroas suecas: 3.22
-- TEST CASE 5:
---- input:
21
---- correct output:
9.66
---- user output:
valor em coroas suecas: 9.66
-- TEST CASE 6:
---- input:
10
---- correct output:
4.6
---- user output:
valor em coroas suecas: 4.6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:10:10)
-- CODE: 
coroassuecas = float(input("valor em coroas suecas: "))
real = float(input("valor em reais: "))
real = coroassuecas * 0.46
print(round(real,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
2.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    real = float(input("valor em reais: "))
                 ^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
12
---- correct output:
5.52
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    real = float(input("valor em reais: "))
                 ^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
1
---- correct output:
0.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    real = float(input("valor em reais: "))
                 ^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
7
---- correct output:
3.22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    real = float(input("valor em reais: "))
                 ^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
21
---- correct output:
9.66
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    real = float(input("valor em reais: "))
                 ^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
10
---- correct output:
4.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    real = float(input("valor em reais: "))
                 ^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:10:15)
-- CODE: 
coroassuecas = float(input("valor em coroas suecas: "))
real = float(input("valor em reais: "))
real = coroassuecas * 0.46
print(round(real,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
2.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    real = float(input("valor em reais: "))
                 ^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
12
---- correct output:
5.52
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    real = float(input("valor em reais: "))
                 ^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
1
---- correct output:
0.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    real = float(input("valor em reais: "))
                 ^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
7
---- correct output:
3.22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    real = float(input("valor em reais: "))
                 ^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
21
---- correct output:
9.66
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    real = float(input("valor em reais: "))
                 ^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
10
---- correct output:
4.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    real = float(input("valor em reais: "))
                 ^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:10:37)
-- CODE: 
coroassuecas = float(input("valor em coroas suecas: "))
real = float(input("valor em reais: "))
real = coroassuecas * 0.46
print(round(real,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
2.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    real = float(input("valor em reais: "))
                 ^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
12
---- correct output:
5.52
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    real = float(input("valor em reais: "))
                 ^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
1
---- correct output:
0.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    real = float(input("valor em reais: "))
                 ^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
7
---- correct output:
3.22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    real = float(input("valor em reais: "))
                 ^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
21
---- correct output:
9.66
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    real = float(input("valor em reais: "))
                 ^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
10
---- correct output:
4.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    real = float(input("valor em reais: "))
                 ^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:08:55)
-- CODE: 
coroas suecas = float(input("valor em coroas suecas: "))
real = float(input("valor em reais: "))
real = coroas suecas * 0.46
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
2.3
-- ERROR:
File "XXXX", line 1
    coroas suecas = float(input("valor em coroas suecas: "))
           ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12
---- correct output:
5.52
-- ERROR:
File "XXXX", line 1
    coroas suecas = float(input("valor em coroas suecas: "))
           ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
0.46
-- ERROR:
File "XXXX", line 1
    coroas suecas = float(input("valor em coroas suecas: "))
           ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
7
---- correct output:
3.22
-- ERROR:
File "XXXX", line 1
    coroas suecas = float(input("valor em coroas suecas: "))
           ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
9.66
-- ERROR:
File "XXXX", line 1
    coroas suecas = float(input("valor em coroas suecas: "))
           ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
4.6
-- ERROR:
File "XXXX", line 1
    coroas suecas = float(input("valor em coroas suecas: "))
           ^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:10:24)
-- CODE: 
coroassuecas = float(input("valor em coroas suecas: "))
real = float(input("valor em reais: "))
real = coroassuecas * 0.46
print(round(real,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
2.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    real = float(input("valor em reais: "))
                 ^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
12
---- correct output:
5.52
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    real = float(input("valor em reais: "))
                 ^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
1
---- correct output:
0.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    real = float(input("valor em reais: "))
                 ^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
7
---- correct output:
3.22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    real = float(input("valor em reais: "))
                 ^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
21
---- correct output:
9.66
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    real = float(input("valor em reais: "))
                 ^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
10
---- correct output:
4.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    real = float(input("valor em reais: "))
                 ^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:08:56)
-- CODE: 
coroas suecas = float(input("valor em coroas suecas: "))
real = float(input("valor em reais: "))
real = coroas suecas * 0.46
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
2.3
-- ERROR:
File "XXXX", line 1
    coroas suecas = float(input("valor em coroas suecas: "))
           ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12
---- correct output:
5.52
-- ERROR:
File "XXXX", line 1
    coroas suecas = float(input("valor em coroas suecas: "))
           ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
0.46
-- ERROR:
File "XXXX", line 1
    coroas suecas = float(input("valor em coroas suecas: "))
           ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
7
---- correct output:
3.22
-- ERROR:
File "XXXX", line 1
    coroas suecas = float(input("valor em coroas suecas: "))
           ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
21
---- correct output:
9.66
-- ERROR:
File "XXXX", line 1
    coroas suecas = float(input("valor em coroas suecas: "))
           ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
4.6
-- ERROR:
File "XXXX", line 1
    coroas suecas = float(input("valor em coroas suecas: "))
           ^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
